rpi5/speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  labels:
    app: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      name: speedtest
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: ghcr.io/librespeed/speedtest:latest-alpine@sha256:5a66605ce5971082343d1889b74229df7b5c3f451eeeff0e6db3d23c5cb556f0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
      restartPolicy: Always
