rpi5/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
